# floor_detection

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt  setup.py
common/floor_detection/: floor_detector.py
config/: floor_detection_config.yaml  floor_detection_config_amk.yaml  floor_detection_config_brsu.yaml
docs/: formal_description.ipynb
ros/action/: DetectFloor.action
ros/launch/: floor_detection.launch
ros/scripts/: floor_detection
ros/srv/: DetectFloor.srv
test/: test_floor_detection.py
